2008-02-25  Loic Dachary <loic@dachary.org>

	* Release 1.3.0

	* tests/test-pokeravatar.py.in: fix https://gna.org/bugs/?11148
	  allows to discard the CORRECTEDtourneyRegister in favor of
	  tourneyRegister
	* pokernetwork/pokerservice.py: error + message functions convert
	  to string before concatenating. (fixes
	  https://gna.org/bugs/?11148).
	* pokernetwork/pokeravatar.py: listHands fixed to accomodate
	  SELECT_ALL packet specifics (fixes https://gna.org/bugs/?11149).
	  error + message functions convert to string before concatenating.

2008-02-24  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokeravatar.py.in (PokerAvatarTestCase.getPersonalInfo):
	Wrote function.
	(PokerAvatarTestCase.test24_personalInfo): Wrote function.
	(PokerAvatarTestCase.listHands): Wrote function.
	(PokerAvatarTestCase.test25_listHands): Wrote function.
	(PokerAvatarTestCase.test26_listTables): Wrote function.
	(PokerAvatarTestCase.listTables): Wrote function.
	(PokerAvatarTestCase.getPlayerInfoError): Wrote function.
	(PokerAvatarTestCase.test27_playerInfoNotLoggedIn): Wrote
	function.
	(PokerAvatarTestCase.normalSetRoles): Wrote function, pulling out
	and expanding sub function in test06_setRoles.
	(PokerAvatarTestCase.test06_setRoles): Rewrote to use
	normalSetRoles.
	(PokerAvatarTestCase.test06_7_setUnknownRole): Wrote function.
	(PokerAvatarTestCase.errorSetRoles): Wrote function.
	(PokerAvatarTestCase.test06_8_setRoleAfterAnotherUserHas): Wrote
	function.
	(PokerAvatarTestCase.setPersonalInfo): Wrote function.
	(PokerAvatarTestCase.test24_personalInfo): Added call to
	setPersonalInfo.
	(PokerAvatarTestCase.getPlayerInfoError): Corrected packet error
	type to search for.
	(PokerAvatarTestCase.setPokerPlayerInfo): Wrote function.
	(PokerAvatarTestCase.test28_setPokerPlayerInfo): Wrote function.
	(PokerAvatarTestCase.listHands): Fixed error OperationalError
	checking.
	(PokerAvatarTestCase.test29_errorSetPokerPlayerInfo): Wrote
	function.